# ackermann_vehicle_plugins

./: CMakeLists.txt  README.md  package.xml
include/: ackermann_kinematics.h  explicit_ackermann_plugin.h
src/: ackermann_kinematics.cpp  explicit_ackermann_plugin.cpp
test/: test_ackermann_kinematics.cpp
