<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ackermann_vehicle_plugins</name>
  <version>0.1.0</version>
  <description>
    Generic Gazebo plugins for Ackermann steering vehicles.
    Provides an explicit Ackermann drive plugin with configurable wheelbase,
    track width, and PID parameters via SDF/xacro. Compatible with any
    4-wheel Ackermann model.
  </description>

  <maintainer email="clibang2022@163.com">ackermann_vehicle_plugins contributors</maintainer>
  <license>Apache-2.0</license>

  <url type="repository">https://github.com/Ming2zun/Pure-tracking-slam-automatic-navigation-system</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 构建依赖 -->
  <depend>rclcpp</depend>
  <depend>gazebo_dev</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>

  <!-- 运行依赖 -->
  <exec_depend>gazebo_ros</exec_depend>

  <!-- 测试依赖 -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Gazebo 插件路径导出 -->
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>
</package>
